--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <li>service</li>
                     <li>pages <span><img src="icons8-down-arrow-50.png" alt="" id="icons"></span></li>
                     <li>contact <span><img src="icons8-down-arrow-50.png" alt="" id="icons"></span></li>
-                    <div class="box"> <a href="/form.html" target="blank">Appoinment <span><img src="icons8-right-button-24.png" alt=""></span> </a></div>
+                    <div class="box"> <a href="form.html" target="blank">Appoinment <span><img src="icons8-right-button-24.png" alt=""></span> </a></div>
                 </ul>
                 <a href=""></a>
             </div>
